# aodn_cloud_optimised

./: .gitignore  .poetry-version  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.md  README_add_new_dataset.md  aodn_cloud_optimised-0.1.0-py3-none-any.whl  copilot_resume  docker-compose.yml  environment.yml  install.sh  motd  poetry_lock_helper.sh  pyproject.toml  requirements.txt  setup.py  setup_miniforge_venvs.sh
.github/instructions/: *.instructions.md
.github/workflows/: build.yml  docker.yaml  docs-build.yml  pre-commit.yml  release.yml  test-mamba.yml  test-setup.yml  test.yml
.pre-commit-hooks/: check_protected_env_vars.sh  check_version_bump.sh
aodn_cloud_optimised/: __init__.py
aodn_cloud_optimised/config/: .common.json.un~  GenerateJSONconfig.py  common.json  distributed.yaml  schema_validation_common.json  schema_validation_parquet.json  schema_validation_zarr.json
aodn_cloud_optimised/flows/: delete_optimised_parquet.py
aodn_cloud_optimised/lib/: AatamsSatelliteTaggingHandler.py  AnmnHourlyTsHandler.py  ArgoHandler.py  BODBAWHandler.py  CommonHandler.py  DataQuery.py  GenericParquetHandler.py  GenericZarrHandler.py  ParquetDataQuery.py  clusterLib.py  cluster_lib.py  common.py  config.py  exceptions.py  logging.py  run_summary.py  s3Tools.py  schema.py
aodn_cloud_optimised/mcp/: README.md  __init__.py  catalog.py  cli.py  notebook_utils.py  server.py
docs/: conf.py  index.rst  installation.rst  mcp_server.rst  module-overview.rst  requirements.txt  usage.rst
docs/adr/: 0001-processing-summary-structured-events.md
docs/development/: dataset-configuration.rst  debug.rst  debugging.rst  documentation-build.rst  documentation.rst  index.rst  installation.rst  mcp-testing.rst  notebooks.rst  release.rst  setup.rst  testing.rst
docs/getting-started/: index.rst  installation.rst  quickstart.rst
docs/how-to/: clustering.rst  dataset-configuration.rst  index.rst  mcp-server.rst  notebooks.rst  query-datasets.rst  update-metadata.rst
integration_testing/: conftest.py  test_ardc_wave_nrt.py  test_mcp_server.py
notebooks/: DataQuery.py  GetAodnData.ipynb  README.md  aatams_acoustic_tagging.ipynb  acorn_gridded_qc_turq.ipynb  aggregated_amsa_nonqc.ipynb  aggregated_dugong_nonqc.ipynb  aggregated_kelp_nonqc.ipynb  aggregated_seabird_nonqc.ipynb  aggregated_seagrass_nonqc.ipynb  amsa_vessel_tracking.ipynb  anfog_nrt.ipynb  animal_acoustic_tracking_delayed_detection_qc.ipynb  animal_acoustic_tracking_delayed_qc.ipynb  animal_acoustic_tracking_delayed_summarised_detection_qc.ipynb  animal_ctd_sat_relay_tagging_delayed_qc.ipynb  animal_ctd_sat_relay_tagging_meop_delayed_qc.ipynb  animal_ctd_satellite_relay_tagging_delayed_qc.ipynb  animal_ctd_satellite_relay_tagging_realtime_qc.ipynb  animal_dive_satellite_relay_tagging_location_qc_realtime_qc.ipynb  animal_dive_satellite_relay_tagging_realtime_qc.ipynb  animal_gps_satellite_relay_tagging_location_qc_realtime_qc.ipynb  animal_haulout_satellite_relay_tagging_location_qc_realtime_qc.ipynb  animal_haulout_satellite_relay_tagging_realtime_qc.ipynb  animal_metadata_satellite_relay_tagging_location_qc_realtime_qc.ipynb  animal_metadata_satellite_relay_tagging_realtime_qc.ipynb  animal_satellite_relay_tagging_diag_realtime_qc.ipynb  animal_satellite_relay_tagging_haulout_realtime_qc.ipynb  animal_satellite_relay_tagging_metadata_realtime_qc.ipynb  animal_satellite_relay_tagging_summary_realtime_qc.ipynb  animal_ssmoutputs_satellite_relay_tagging_realtime_qc.ipynb  animal_summary_satellite_relay_tagging_location_qc_realtime_qc.ipynb  animal_summary_satellite_relay_tagging_realtime_qc.ipynb  anmn_ctd.ipynb  anmn_temperature_logger.ipynb  ardc_wave_nrt.ipynb  argo.ipynb  argo_core.ipynb  autonomous_underwater_vehicle.ipynb  diver_cryptobenthic_fish_abundance_qc.ipynb  (+164 more)
notebooks/mcp_generated_notebooks/: DataQuery.py  animal_tagging_tasmania_oceanographic_context.ipynb  coffs_harbour_jan2020_sea_state_comparison.ipynb  southern_ocean_sst_anomaly_dec_feb.ipynb  tasmania_surf_conditions_monthly.ipynb  tasmania_wave_buoy_data_investigation.ipynb
test_aodn_cloud_optimised/: conftest.py  test_aatams_sattag_handler.py  test_aodn_data_queries.py  test_ardcwave.py  test_argohandler.py  test_bin_generic.py  test_bin_generic_error.py  test_bin_generic_unit.py  test_config.py  test_create_aws_registry.py  test_dim_validation.py  test_flows_delete_optimised_parquet.py  test_generic_parquet_handler.py  test_generic_zarr_handler.py  test_generic_zarr_handler_netcdf3_netcdf4.py  test_generic_zarr_handler_no_cluster.py  test_genericparquethandler.py  test_logging.py  test_orchestrate_generate.py  test_parquet_argo_handler.py  test_parquet_discovery.py  test_parquet_meop.py  test_parquet_queries.py  test_s3_tools.py  test_s3tools.py  test_schema.py  test_soopxbtnrt.py
test_aodn_cloud_optimised/resources/: 2902093_prof.nc  A69-1105-135_107799906_130722039.csv  BOM_20230101_CAPE-SORELL_RT_WAVE-PARAMETERS_monthly.nc  BOM_20240301_CAPE-SORELL_RT_WAVE-PARAMETERS_monthly.nc  BOM_20250101_CAPE-SORELL_RT_WAVE-PARAMETERS_monthly.nc  BOM_20250201_CAPE-SORELL_RT_WAVE-PARAMETERS_monthly.nc  IMOSPortalCollections.csv  IMOS_ACORN_V_20220312T003000Z_NWA_FV01_1-hour-avg.nc  IMOS_ACORN_V_20220312T013000Z_NWA_FV01_1-hour-avg.nc  IMOS_ACORN_V_20220312T183000Z_NWA_FV01_1-hour-avg.nc  IMOS_ACORN_V_20240101T000000Z_TURQ_FV01_1-hour-avg.nc  IMOS_ACORN_V_20240101T010000Z_TURQ_FV01_1-hour-avg.nc  IMOS_ACORN_V_20240101T020000Z_TURQ_FV01_1-hour-avg.nc  IMOS_ACORN_V_20240101T030000Z_TURQ_FV01_1-hour-avg.nc  IMOS_ANMN-NSW_CDSTZ_20210429T015500Z_SYD140_FV01_SYD140-2104-SBE37SM-RS232-128_END-20210812T011500Z_C-20210827T074819Z.nc  IMOS_ANMN-NSW_CDSTZ_20210429T015500Z_SYD140_FV01_SYD140-2104-SBE37SM-RS232-128_END-20210812T011500Z_C-20210827T074819Z.schema  IMOS_OceanCurrent_HV_20110901T000000Z_GSLA_FV02_NRT.nc  IMOS_OceanCurrent_HV_20110902T000000Z_GSLA_FV02_NRT.nc  IMOS_OceanCurrent_HV_20240101T000000Z_GSLA_FV02_NRT.nc  IMOS_OceanCurrent_HV_20240102T000000Z_GSLA_FV02_NRT.nc  IMOS_SOOP-FishSOOP_TP_20250708T032737Z_FV01_1195.nc  (+31 more)
(+281 files in other folders)
