[build-system]
requires = ["poetry-core==2.2.1", "wheel"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.11,<4.0"
name = "aodn-cloud-optimised"
version = "0.1.59"
description = "Cloud optimised data formats for IMOS NetCDF files and CSVs."
authors = [
  { name = "Laurent Besnard (AODN)", email = "laurent.besnard@utas.edu.au" },
]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["cloud", "data", "NetCDF", "CSV", "Zarr", "Parquet"]
dependencies = [
  # TODO: hardpinned because of bug https://github.com/Unidata/netcdf4-python/issues/1342
  "netCDF4==1.6.5",

  # TODO: new version created issue similar to https://github.com/Sinaptik-AI/pandas-ai/issues/1251
  # only visible when opening with xarray some NetCDF. but not visible with dask although empty data NaN is created
  "numpy<2.0.0",

  "polars>=1.35.1",
  "pandas>=2.2.3",
  "python-dateutil>=2.9.0",
  "jsonschema>=4.22.0",
  "cfunits>=3.3.0",

  # TODO: libmamba cant install 3.12.1 on coiled!
  "h5py==3.11.0",

  "h5netcdf>=1.3.0",
  "scipy>=1.15.2",
  "boto3>=1.34.162",
  "pyarrow==17.0.0",
  "rechunker>=0.5.2",
  "s3fs>=2025.5.1",
  "fsspec==2025.5.1",
  "shapely>=2.0.4",

  # Versions post 2025.6.1 are broken because of https://github.com/pydata/xarray/issues/10712.
  # Forced to create a custom fork with the changes from Joseph (see issue 10501).
  "xarray @ git+https://github.com/lbesnard/xarray.git@2025.06.01.dev2#egg=xarray[complete]",

  # "xarray[complete]==2025.6.1",  # Alternative official release (broken)

  "cftime>=1.6.3",
  "zarr==2.18.7",
  "geopandas>=0.14.4",
  "coiled>=1.90.4",
  "dask-cloudprovider>=2024.9.1",
  "dask>=2025.3.0",
  "dask-expr>=2.0.0",             # needs to be added for coiled otherwise an old version is used and not updated
  "colorama>=0.4.6",
  "s3path>=0.5.7",
  "python-levenshtein>=0.25.1",
  "numcodecs<0.16",
]

[project.urls]
Source = "https://github.com/aodn/aodn_cloud_optimised"

[tool.poetry.group.dev.dependencies]
poetry = "==2.2.1"
poetry-plugin-freeze = ">=1.2.0"
virtualenv = "==20.30.0" # TODO: pinned because of https://github.com/python-poetry/poetry/issues/10378
pytest = "^8.2.1"
ipdb = "^0.13"
ipython = "^7.5.3"
coverage = "^7.5.3"
pre-commit = "^4.0.1"
sphinxcontrib-asciinema = ">=0.4.2"
sphinx-rtd-theme = ">=3.0.2"
moto = { version = "==5.1.1", extras = [
  "ec2",
  "s3",
  "server",
  "all",
] } # Add Moto with optional dependencies; TODO: hardpin because of Bug https://github.com/getmoto/moto/issues/8762#issuecomment-2856822832
fuzzywuzzy = ">=0.18.0"
sphinx = ">=7.3.7"
poetry-pre-commit-plugin = ">=0.2.1"
asciinema = ">=2.4.0" # to record terminal sessions, useful for documentation
matplotlib = "^3.9.1"
cartopy = ">=0.23.0"
termcolor = "^2.4.0"
nbformat = "^5.10.4"
gsw = ">=3.6.19"
seaborn = ">=0.13.2"
windrose = ">=1.9.2"
tabulate = ">=0.9.0"
folium = ">=0.20.0"

[project.scripts]
#cloud_optimised_srs_oc_ljco_to_parquet = "aodn_cloud_optimised.bin.srs_oc_ljco_to_parquet:main"
cloud_optimised_animal_acoustic_tracking_delayed_qc = "aodn_cloud_optimised.bin.animal_acoustic_tracking_delayed_qc:main"
cloud_optimised_animal_ctd_satellite_relay_tagging_delayed_qc = "aodn_cloud_optimised.bin.animal_ctd_satellite_relay_tagging_delayed_qc:main"
cloud_optimised_argo = "aodn_cloud_optimised.bin.argo:main"
cloud_optimised_autonomous_underwater_vehicle = "aodn_cloud_optimised.bin.autonomous_underwater_vehicle:main"
cloud_optimised_create_aws_registry_dataset = "aodn_cloud_optimised.bin.create_aws_registry_dataset:main"
cloud_optimised_create_dataset_config = "aodn_cloud_optimised.bin.create_dataset_config:main"
cloud_optimised_diver_benthic_cover_in_situ_qc = "aodn_cloud_optimised.bin.diver_benthic_cover_in_situ_qc:main"
cloud_optimised_diver_cryptobenthic_fish_abundance_qc = "aodn_cloud_optimised.bin.diver_cryptobenthic_fish_abundance_qc:main"
cloud_optimised_diver_mobile_macroinvertebrate_abundance_qc = "aodn_cloud_optimised.bin.diver_mobile_macroinvertebrate_abundance_qc:main"
cloud_optimised_diver_off_transect_species_observations_qc = "aodn_cloud_optimised.bin.diver_off_transect_species_observations_qc:main"
cloud_optimised_diver_photoquadrat_score_qc = "aodn_cloud_optimised.bin.diver_photoquadrat_score_qc:main"
cloud_optimised_diver_reef_fish_abundance_biomass_qc = "aodn_cloud_optimised.bin.diver_reef_fish_abundance_biomass_qc:main"
cloud_optimised_diver_site_information_qc = "aodn_cloud_optimised.bin.diver_site_information_qc:main"
cloud_optimised_diver_survey_metadata_qc = "aodn_cloud_optimised.bin.diver_survey_metadata_qc:main"
cloud_optimised_extract_missing_var_from_log = "aodn_cloud_optimised.bin.extract_missing_var_from_log:main"
cloud_optimised_model_sea_level_anomaly_gridded_realtime = "aodn_cloud_optimised.bin.model_sea_level_anomaly_gridded_realtime:main"
cloud_optimised_mooring_acidification_delayed_qc = "aodn_cloud_optimised.bin.mooring_acidification_delayed_qc:main"
cloud_optimised_mooring_acidification_realtime_qc = "aodn_cloud_optimised.bin.mooring_acidification_realtime_qc:main"
cloud_optimised_mooring_ctd_delayed_qc = "aodn_cloud_optimised.bin.mooring_ctd_delayed_qc:main"
cloud_optimised_mooring_hourly_timeseries_delayed_qc = "aodn_cloud_optimised.bin.mooring_hourly_timeseries_delayed_qc:main"
cloud_optimised_mooring_satellite_altimetry_calibration_validation = "aodn_cloud_optimised.bin.mooring_satellite_altimetry_calibration_validation:main"
cloud_optimised_mooring_southern_ocean_surface_fluxes_realtime_qc = "aodn_cloud_optimised.bin.mooring_southern_ocean_surface_fluxes_realtime_qc:main"
cloud_optimised_mooring_southern_ocean_surface_properties_realtime_qc = "aodn_cloud_optimised.bin.mooring_southern_ocean_surface_properties_realtime_qc:main"
cloud_optimised_mooring_temperature_logger_delayed_qc = "aodn_cloud_optimised.bin.mooring_temperature_logger_delayed_qc:main"
cloud_optimised_mooring_timeseries_realtime_qc = "aodn_cloud_optimised.bin.mooring_timeseries_realtime_qc:main"
cloud_optimised_mooring_wave_timeseries_delayed_qc = "aodn_cloud_optimised.bin.mooring_wave_timeseries_delayed_qc:main"
cloud_optimised_radar_BonneyCoast_velocity_hourly_averaged_delayed_qc = "aodn_cloud_optimised.bin.radar_BonneyCoast_velocity_hourly_averaged_delayed_qc:main"
cloud_optimised_radar_CapricornBunkerGroup_velocity_hourly_averaged_delayed_qc = "aodn_cloud_optimised.bin.radar_CapricornBunkerGroup_velocity_hourly_averaged_delayed_qc:main"
cloud_optimised_radar_CapricornBunkerGroup_wave_delayed_qc = "aodn_cloud_optimised.bin.radar_CapricornBunkerGroup_wave_delayed_qc:main"
cloud_optimised_radar_CapricornBunkerGroup_wind_delayed_qc = "aodn_cloud_optimised.bin.radar_CapricornBunkerGroup_wind_delayed_qc:main"
cloud_optimised_radar_CoffsHarbour_velocity_hourly_averaged_delayed_qc = "aodn_cloud_optimised.bin.radar_CoffsHarbour_velocity_hourly_averaged_delayed_qc:main"
cloud_optimised_radar_CoffsHarbour_wave_delayed_qc = "aodn_cloud_optimised.bin.radar_CoffsHarbour_wave_delayed_qc:main"
cloud_optimised_radar_CoffsHarbour_wind_delayed_qc = "aodn_cloud_optimised.bin.radar_CoffsHarbour_wind_delayed_qc:main"
cloud_optimised_radar_CoralCoast_velocity_hourly_averaged_delayed_qc = "aodn_cloud_optimised.bin.radar_CoralCoast_velocity_hourly_averaged_delayed_qc:main"
cloud_optimised_radar_Newcastle_velocity_hourly_averaged_delayed_qc = "aodn_cloud_optimised.bin.radar_Newcastle_velocity_hourly_averaged_delayed_qc:main"
cloud_optimised_radar_NorthWestShelf_velocity_hourly_averaged_delayed_qc = "aodn_cloud_optimised.bin.radar_NorthWestShelf_velocity_hourly_averaged_delayed_qc:main"
cloud_optimised_radar_RottnestShelf_velocity_hourly_averaged_delayed_qc = "aodn_cloud_optimised.bin.radar_RottnestShelf_velocity_hourly_averaged_delayed_qc:main"
cloud_optimised_radar_RottnestShelf_wave_delayed_qc = "aodn_cloud_optimised.bin.radar_RottnestShelf_wave_delayed_qc:main"
cloud_optimised_radar_RottnestShelf_wind_delayed_qc = "aodn_cloud_optimised.bin.radar_RottnestShelf_wind_delayed_qc:main"
cloud_optimised_radar_SouthAustraliaGulfs_velocity_hourly_averaged_delayed_qc = "aodn_cloud_optimised.bin.radar_SouthAustraliaGulfs_velocity_hourly_averaged_delayed_qc:main"
cloud_optimised_radar_SouthAustraliaGulfs_wave_delayed_qc = "aodn_cloud_optimised.bin.radar_SouthAustraliaGulfs_wave_delayed_qc:main"
cloud_optimised_radar_SouthAustraliaGulfs_wind_delayed_qc = "aodn_cloud_optimised.bin.radar_SouthAustraliaGulfs_wind_delayed_qc:main"
cloud_optimised_radar_TurquoiseCoast_velocity_hourly_averaged_delayed_qc = "aodn_cloud_optimised.bin.radar_TurquoiseCoast_velocity_hourly_averaged_delayed_qc:main"
cloud_optimised_satellite_chlorophylla_carder_1day_aqua = "aodn_cloud_optimised.bin.satellite_chlorophylla_carder_1day_aqua:main"
cloud_optimised_satellite_chlorophylla_gsm_1day_aqua = "aodn_cloud_optimised.bin.satellite_chlorophylla_gsm_1day_aqua:main"
cloud_optimised_satellite_chlorophylla_gsm_1day_noaa20 = "aodn_cloud_optimised.bin.satellite_chlorophylla_gsm_1day_noaa20:main"
cloud_optimised_satellite_chlorophylla_gsm_1day_snpp = "aodn_cloud_optimised.bin.satellite_chlorophylla_gsm_1day_snpp:main"
cloud_optimised_satellite_chlorophylla_oc3_1day_aqua = "aodn_cloud_optimised.bin.satellite_chlorophylla_oc3_1day_aqua:main"
cloud_optimised_satellite_chlorophylla_oc3_1day_noaa20 = "aodn_cloud_optimised.bin.satellite_chlorophylla_oc3_1day_noaa20:main"
cloud_optimised_satellite_chlorophylla_oc3_1day_snpp = "aodn_cloud_optimised.bin.satellite_chlorophylla_oc3_1day_snpp:main"
cloud_optimised_satellite_chlorophylla_oci_1day_aqua = "aodn_cloud_optimised.bin.satellite_chlorophylla_oci_1day_aqua:main"
cloud_optimised_satellite_chlorophylla_oci_1day_noaa20 = "aodn_cloud_optimised.bin.satellite_chlorophylla_oci_1day_noaa20:main"
cloud_optimised_satellite_chlorophylla_oci_1day_snpp = "aodn_cloud_optimised.bin.satellite_chlorophylla_oci_1day_snpp:main"
cloud_optimised_satellite_diffuse_attenuation_coefficent_1day_aqua = "aodn_cloud_optimised.bin.satellite_diffuse_attenuation_coefficent_1day_aqua:main"
cloud_optimised_satellite_diffuse_attenuation_coefficent_1day_noaa20 = "aodn_cloud_optimised.bin.satellite_diffuse_attenuation_coefficent_1day_noaa20:main"
cloud_optimised_satellite_diffuse_attenuation_coefficent_1day_snpp = "aodn_cloud_optimised.bin.satellite_diffuse_attenuation_coefficent_1day_snpp:main"
cloud_optimised_satellite_ghrsst_l3c_1day_nighttime_himawari8 = "aodn_cloud_optimised.bin.satellite_ghrsst_l3c_1day_nighttime_himawari8:main"
cloud_optimised_satellite_ghrsst_l3s_1day_daynighttime_multi_sensor_australia = "aodn_cloud_optimised.bin.satellite_ghrsst_l3s_1day_daynighttime_multi_sensor_australia:main"
cloud_optimised_satellite_ghrsst_l3s_1day_daynighttime_multi_sensor_southernocean = "aodn_cloud_optimised.bin.satellite_ghrsst_l3s_1day_daynighttime_multi_sensor_southernocean:main"
cloud_optimised_satellite_ghrsst_l3s_1day_daynighttime_single_sensor_australia = "aodn_cloud_optimised.bin.satellite_ghrsst_l3s_1day_daynighttime_single_sensor_australia:main"
cloud_optimised_satellite_ghrsst_l3s_1day_daynighttime_single_sensor_southernocean = "aodn_cloud_optimised.bin.satellite_ghrsst_l3s_1day_daynighttime_single_sensor_southernocean:main"
cloud_optimised_satellite_ghrsst_l3s_1day_nighttime_geopolar_multi_sensor_australia = "aodn_cloud_optimised.bin.satellite_ghrsst_l3s_1day_nighttime_geopolar_multi_sensor_australia:main"
cloud_optimised_satellite_ghrsst_l3s_1day_nighttime_multi_sensor_australia = "aodn_cloud_optimised.bin.satellite_ghrsst_l3s_1day_nighttime_multi_sensor_australia:main"
cloud_optimised_satellite_ghrsst_l3s_1month_daytime_single_sensor_australia = "aodn_cloud_optimised.bin.satellite_ghrsst_l3s_1month_daytime_single_sensor_australia:main"
cloud_optimised_satellite_ghrsst_l3s_3day_daynighttime_multi_sensor_australia = "aodn_cloud_optimised.bin.satellite_ghrsst_l3s_3day_daynighttime_multi_sensor_australia:main"
cloud_optimised_satellite_ghrsst_l3s_3day_daynighttime_single_sensor_australia = "aodn_cloud_optimised.bin.satellite_ghrsst_l3s_3day_daynighttime_single_sensor_australia:main"
cloud_optimised_satellite_ghrsst_l3s_6day_daynighttime_single_sensor_australia = "aodn_cloud_optimised.bin.satellite_ghrsst_l3s_6day_daynighttime_single_sensor_australia:main"
cloud_optimised_satellite_ghrsst_l4_gamssa_1day_multi_sensor_world = "aodn_cloud_optimised.bin.satellite_ghrsst_l4_gamssa_1day_multi_sensor_world:main"
cloud_optimised_satellite_ghrsst_l4_ramssa_1day_multi_sensor_australia = "aodn_cloud_optimised.bin.satellite_ghrsst_l4_ramssa_1day_multi_sensor_australia:main"
cloud_optimised_satellite_nanoplankton_fraction_oc3_1day_aqua = "aodn_cloud_optimised.bin.satellite_nanoplankton_fraction_oc3_1day_aqua:main"
cloud_optimised_satellite_net_primary_productivity_gsm_1day_aqua = "aodn_cloud_optimised.bin.satellite_net_primary_productivity_gsm_1day_aqua:main"
cloud_optimised_satellite_net_primary_productivity_oc3_1day_aqua = "aodn_cloud_optimised.bin.satellite_net_primary_productivity_oc3_1day_aqua:main"
cloud_optimised_satellite_optical_water_type_1day_aqua = "aodn_cloud_optimised.bin.satellite_optical_water_type_1day_aqua:main"
cloud_optimised_satellite_picoplankton_fraction_oc3_1day_aqua = "aodn_cloud_optimised.bin.satellite_picoplankton_fraction_oc3_1day_aqua:main"
cloud_optimised_slocum_glider_delayed_qc = "aodn_cloud_optimised.bin.slocum_glider_delayed_qc:main"
cloud_optimised_station_nrs_wireless_sensor_network_realtime_qc = "aodn_cloud_optimised.bin.station_nrs_wireless_sensor_network_realtime_qc:main"
cloud_optimised_station_wireless_sensor_network_delayec_qc = "aodn_cloud_optimised.bin.station_wireless_sensor_network_delayec_qc:main"
cloud_optimised_update_all_metadata = "aodn_cloud_optimised.bin.update_metadata:main"
cloud_optimised_vessel_air_sea_flux_product_delayed = "aodn_cloud_optimised.bin.vessel_air_sea_flux_product_delayed:main"
cloud_optimised_vessel_air_sea_flux_sst_meteo_realtime = "aodn_cloud_optimised.bin.vessel_air_sea_flux_sst_meteo_realtime:main"
cloud_optimised_vessel_co2_delayed_qc = "aodn_cloud_optimised.bin.vessel_co2_delayed_qc:main"
cloud_optimised_vessel_fishsoop_realtime_qc = "aodn_cloud_optimised.bin.vessel_fishsoop_realtime_qc:main"
cloud_optimised_vessel_nrs_ctd_profiles_delayed_qc = "aodn_cloud_optimised.bin.vessel_nrs_ctd_profiles_delayed_qc:main"
cloud_optimised_vessel_satellite_radiance_delayed_qc = "aodn_cloud_optimised.bin.vessel_satellite_radiance_delayed_qc:main"
cloud_optimised_vessel_satellite_radiance_derived_product = "aodn_cloud_optimised.bin.vessel_satellite_radiance_derived_product:main"
cloud_optimised_vessel_sst_delayed_qc = "aodn_cloud_optimised.bin.vessel_sst_delayed_qc:main"
cloud_optimised_vessel_sst_realtime_nonqc = "aodn_cloud_optimised.bin.vessel_sst_realtime_nonqc:main"
cloud_optimised_vessel_trv_realtime_qc = "aodn_cloud_optimised.bin.vessel_trv_realtime_qc:main"
cloud_optimised_vessel_xbt_delayed_qc = "aodn_cloud_optimised.bin.vessel_xbt_delayed_qc:main"
cloud_optimised_vessel_xbt_realtime_nonqc = "aodn_cloud_optimised.bin.vessel_xbt_realtime_nonqc:main"
cloud_optimised_wave_buoy_realtime_nonqc = "aodn_cloud_optimised.bin.wave_buoy_realtime_nonqc:main"
generic_cloud_optimised_creation = "aodn_cloud_optimised.bin.generic_cloud_optimised_creation:main"
pydantic_precommit_hook = "aodn_cloud_optimised.bin.pydantic_precommit_hook:main"


[tool.pre_commit]
version = "2.3.0"
config = ".pre-commit-config.yaml"

[tool.pytest.ini_options]
# Other pytest settings can go here
addopts = "--ignore=integration_testing"
